--- a/.linguirc
+++ b/.linguirc
@@ -1,17 +1,9 @@
 {
- "catalogs": [{
-   "path": "src/locale/{locale}/messages",
-   "include": ["src"],
-   "exclude": ["**/node_modules/**"]
- }],
- "compileNamespace": "cjs",
- "extractBabelOptions": {},
- "fallbackLocales": {},
- "format": "po",
- "locales": ["en", "ua", "ru"],
- "orderBy": "messageId",
- "pseudoLocale": "",
- "rootDir": ".",
- "runtimeConfigModule": ["@lingui/core", "i18n"],
- "sourceLocale": "",
+   "locales": ["en", "ru", "uk"],
+   "sourceLocale": "en",
+   "catalogs": [{
+      "path": "src/locales/{locale}/messages",
+      "include": ["src"]
+   }],
+   "format": "minimal"
 }
