--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "dependencies": {
     "@lingui/react": "^3.2.3",
     "@material-ui/core": "^4.11.1",
+    "@nuxtjs/axios": "^5.12.3",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "flag-icon-css": "^3.5.0",
     "get-google-fonts": "^1.2.2",
